--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -46,6 +46,7 @@
                     height: auto;
                 }
                 .socias-home{
+                    position: relative;
                     ul{
                         margin-top: 2rem;
                         display: flex;
@@ -59,18 +60,103 @@
                             }
                         }
                     }
+                    &::after{
+                        content: "";
+                        width: 100%;
+                        height: 5px;
+                        background: $border-color;
+                        border-radius: 12px 12px 0px 0px;
+                        position: absolute;
+                        bottom: -10px;
+                    }
                 }
             }
         }
     }
 }
 .s-servicos{
-    background: url(../img/dalmatian-spots.svg) no-repeat center center;
-    background-size: cover;
+    overflow: hidden;
     .container{
         .main-area-servicos{
+            // background: url("../img/dalmatian-spots.svg") no-repeat center center;
+            background-size: cover;
             .right-area-servicos{
-                display: block;
+                .text{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    width: 100%;
+                    h2, span{
+                        color: rgb(0, 0, 0);
+                    }
+                    h2{
+                        font-size: 5rem;
+                        font-weight: 800;
+                    }
+                    span{
+                        font-size: 2rem;
+                        line-height: 150%;
+                    }
+                }
+            }
+            .aviso-cards{
+                span{
+                    font-size: 1.4rem;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    padding: 2rem 4rem;
+                }
+            }
+            .swiper-pagination{
+                position: relative;
+                max-width: 15%;
+                .swiper-pagination-bullet{
+                    background-color: $border-color;
+                    opacity: 0.3;
+                    border-radius: 1.2rem;
+                    height: 1rem;
+                    width: 1rem;
+                    transition: all .3s;
+                    &-active{
+                        opacity: 1;
+                        width: 1.7rem;
+                    }
+                }
+            }
+        }
+        .tec-info{
+            padding: 3.5rem;
+            width: 100%;
+            .text{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                h3{
+                    font-size: 3rem;
+                    font-weight: 800;
+                }
+                p{
+                    position: relative;
+                    width: 100%;
+                    max-width: 75%;
+                    text-align: center;
+                    font-size: 1.6rem;
+                    line-height: 150%;
+                    padding-bottom: 1rem;
+                    &::after{
+                        position: absolute;
+                        content: "";
+                        bottom: 0;
+                        width: 100%;
+                        left:  0;
+                        height: 1rem;
+                        border-radius: 12px 12px 0px 0px;
+                        background-color:  rgba(88, 8, 163, 0.555);
+                    }
+                }
             }
         }
     }
