--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -76,27 +76,41 @@
 }
 .s-servicos{
     overflow: hidden;
+    position: relative;
     .container{
         .main-area-servicos{
             // background: url("../img/dalmatian-spots.svg") no-repeat center center;
             background-size: cover;
             .right-area-servicos{
                 .text{
+                    padding: 1rem;
                     display: flex;
                     flex-direction: column;
                     align-items: center;
                     justify-content: center;
                     width: 100%;
+                    position: relative;
                     h2, span{
                         color: rgb(0, 0, 0);
                     }
                     h2{
+                        letter-spacing: 1rem;
                         font-size: 5rem;
-                        font-weight: 800;
+                        font-weight: 600;
                     }
                     span{
                         font-size: 2rem;
                         line-height: 150%;
+                    }
+                    &::after{
+                        position: absolute;
+                        content: "";
+                        bottom: 0;
+                        width: 100%;
+                        max-width: 50rem;
+                        height: 20rem;
+                        border-radius: 100px 100px;
+                        background-color:  rgba(88, 8, 163, 0.555);
                     }
                 }
             }
@@ -127,13 +141,24 @@
             }
         }
         .tec-info{
-            padding: 3.5rem;
+            position: absolute;
+            bottom: 0;
+            left: -30px;
             width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             .text{
+                width: 100%;
+                width: 85rem;
+                background-color: #f5f1f1;
+                border-radius: 2rem;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
+                padding: 1rem 1rem 0rem 1rem;
+                border: 6px solid rgba(54, 8, 163, 0.555);
                 h3{
                     font-size: 3rem;
                     font-weight: 800;
@@ -141,7 +166,6 @@
                 p{
                     position: relative;
                     width: 100%;
-                    max-width: 75%;
                     text-align: center;
                     font-size: 1.6rem;
                     line-height: 150%;
@@ -154,9 +178,71 @@
                         left:  0;
                         height: 1rem;
                         border-radius: 12px 12px 0px 0px;
-                        background-color:  rgba(88, 8, 163, 0.555);
+                        background-color:  rgba(54, 8, 163, 0.555);
                     }
                 }
+            }
+        }
+    }
+}
+
+.s-sobre{
+    background: url("../img/subtle-prism.svg") no-repeat center center;
+    padding: 10rem 0rem;
+    overflow: hidden;
+    .container{
+        .main-sobre{
+            @include flex(row, center, space-between);
+            .sobre-left{
+                width: 100%;
+                max-width: 45%;
+                background-color: #e3daec;
+                border-radius: 5rem;
+                padding: 2rem 2rem;
+                box-shadow: -10px 10px 10px #333;
+                h2{
+                    text-align: center;
+                    font-size: 3rem;
+                    font-weight: 600;
+                    margin-bottom: 2rem;
+                    padding: 2rem;
+                    border-radius: 3rem;
+                    background-color: $border-color;
+                    color: #f5f1f1;
+                }
+                ul{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-start;
+                    margin-bottom: 4rem;
+                    li{
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        &:not(:first-child){
+                            margin-top: 5rem;
+                        }
+                        span{
+                            margin-left: 1rem;
+                            font-size: 2rem;
+                            line-height: 150%;
+                        }
+                        img{
+                            width: 4rem;
+                        }
+                    }
+                }
+                P{
+                    padding: 2rem;
+                    text-align: center;
+                    font-size: 1.6rem;
+                    line-height: 150%;
+                }
+            }
+            .sobre-right{
+                width: 100%;
+                max-width: 45%;
+                overflow: hidden;
             }
         }
     }
