--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -192,7 +192,7 @@
     overflow: hidden;
     .container{
         .main-sobre{
-            @include flex(row, center, space-between);
+            @include flex(row, flex-start, space-between);
             .sobre-left{
                 width: 100%;
                 max-width: 45%;
@@ -214,13 +214,13 @@
                     display: flex;
                     flex-direction: column;
                     align-items: flex-start;
-                    margin-bottom: 4rem;
+                    margin-bottom: 2rem;
                     li{
                         display: flex;
                         align-items: center;
                         justify-content: center;
                         &:not(:first-child){
-                            margin-top: 5rem;
+                            margin-top: 3rem;
                         }
                         span{
                             margin-left: 1rem;
@@ -233,8 +233,8 @@
                     }
                 }
                 P{
-                    padding: 2rem;
-                    text-align: center;
+                    padding: 0rem 1rem;
+                    text-align: justify;
                     font-size: 1.6rem;
                     line-height: 150%;
                 }
@@ -243,6 +243,75 @@
                 width: 100%;
                 max-width: 45%;
                 overflow: hidden;
+                h2{
+                    margin-top: 2rem;
+                    font-size: 5rem;
+                    text-align: center;
+                    background-color: #f5f1f1;
+                    border-radius: 5rem;
+                    padding: 0.5rem;
+                    margin-bottom: 3rem;
+                }
+                .swiper-pagination-bullet{
+                    background-color: #20e6dc;
+                    opacity: 0.3;
+                    border-radius: 1.2rem;
+                    height: 1rem;
+                    width: 1rem;
+                    transition: all .3s;
+                    &-active{
+                        opacity: 1;
+                        width: 1.7rem;
+                    }
+                }    
+                .swiper-one{
+                    position: relative;
+                    height: 28rem;
+                    display: flex;
+                    flex-direction: column;
+                    .swiper-pagination{
+                        max-width: 25%;
+                        height: 2rem;
+                        position: absolute;
+                        top: -10px;
+                        left: 395px;
+                    }
+                    span{
+                        color: #f5f1f1;
+                        font-size: 1.3rem;
+                        padding: 0.4rem;
+                        text-align: end;
+                    }
+                }
+                .swiper-two{
+                    margin-top: 1rem;
+                    position: relative;
+                    display: flex;
+                    flex-direction: column;
+                    .swiper-pagination-two{
+                        max-width: 25%;
+                        position: absolute;
+                        top: -10px;
+                        left: 395px;
+                    } 
+                    span{
+                        color: #f5f1f1;
+                        font-size: 1.3rem;
+                        padding: 0.4rem;
+                        text-align: end;
+                    }
+                }    
+                .card-projetos{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    img{
+                        width: 100%;
+                        border-radius: 2rem;
+                        max-width: 40rem;
+                    }
+                }
             }
         }
     }
