--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -21,15 +21,34 @@ header{
                 @include flex(row, center, space-between);
                 li{
                     margin-right: 8rem;
+                    @include responsive(991px){
+                        margin-right: 4.5rem;
+                    }
                     a{
                         font-family: 'Poppins', sans-serif;
                         font-size: 1.6rem;
                         line-height: 125%;
                         transition: all .4s;
+                        color: #f2f2f2;
                         &:hover{
-                            color: #1900ff;
+                            color: #000;
                         }
                     }
+                }
+            }
+        }
+    }
+    transition: all .3s;
+}
+.fixed-menu{
+    background-color: #f2f2f2;
+    box-shadow: -10px 0px 10px #333;
+    ul{
+        li{
+            a{
+                color: black !important;
+                &:hover{
+                    color: blue !important;
                 }
             }
         }
