--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -49,6 +49,9 @@
                     max-width: 30rem;
                     height: auto;
                 }
+                #minha-foto{
+                    animation: floating 4s infinite;
+                }
                 .socias-home{
                     position: relative;
                     ul{
