--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -125,17 +125,30 @@ header{
                 right: 30px;
             }
         }
+        .btn-primary{
+            color: $border-color;
+            &:hover{
+                color: #fff;
+            }
+        }
     }
 }
 .fixed-menu{
     background-color: #f2f2f2;
     box-shadow: -10px 0px 10px #333;
+    .btn-primary{
+        color: #000;
+        border-color: #000;
+        &:hover{
+            color: #fff;
+        }
+    }
     ul{
         li{
             a{
                 color: black !important;
                 &:hover{
-                    color: blue !important;
+                    color: #0000ff !important;
                 }
             }
         }
