--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -323,6 +323,7 @@
                             margin-left: 1rem;
                             font-size: 2rem;
                             line-height: 150%;
+                            margin-top: 1rem;
                         }
                         img{
                             width: 4rem;
