--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -56,6 +56,12 @@
                 &#item-img06{
                     border: 10px solid rgb(64, 100, 165);
                 }
+                &#item-img07{
+                    border: 10px solid rgb(60, 209, 255);
+                }
+                &#item-img08{
+                    border: 10px solid rgb(224, 51, 51);
+                }
             }
             img{
                 width: 100%;
